# beach-fractal

./: README.md  app.py  pyproject.toml
beach/: __init__.py  beach.py  from_image.py  grain.py  point.py
